bugfix: slider arrows on IE

--- a/wp-content/themes/sage/assets/styles/components/_buttons.less
+++ b/wp-content/themes/sage/assets/styles/components/_buttons.less
@@ -19,7 +19,6 @@
 		outline: none;
 		background: transparent;
 		position: absolute;
-		left: -80px;
 		top: 90px;
 		font-size: 2.5em;
 		opacity: .4;
@@ -33,8 +32,10 @@
 			content: '\f053';
 		}
 	}
+	.slick-prev {
+		left: -80px;
+	}
 	.slick-next {
-		left: initial;
 		right: -80px;
 		&:before {
 			font-family: fontawesome;
